versioned_docs/version-22.10/security/user-data-storage/what-is-centreon-ceip.md
---
id: what-is-centreon-ceip
title: What is Centreon CEIP?
---

Joining the Centreon Customer Experience Improvement Program

## Customer Experience Improvement Program

Centreon is continually striving to understand and anticipate our users needs in
order to deliver world-class products and solutions. The Customer Experience
Improvement Program (CEIP) will deliver benefits to our users by allowing us to
understand how you use our software, so that we can provide you with a
continuous enhancement of your Centreon software experience. The program has two
components:

  - A simple telemetry
  - Advanced statistics on the use of the Centreon software suite
  - The use of functionalities within the user interface

Telemetry anonymously and automatically collects the following data:

  - Information such as the operating system version of the Centreon main server
    of the platform as well as the name and version of the DBMS.
  - Centreon product information such as number of servers and version numbers
    of components installed on the Centreon main server (modules & widgets).
  - Centreon information such as number of hosts, services, groups of hosts &
    services, and usage of modules and widgets.
  - The timezone of the Centreon server.

Advanced statistics include the use of additional components such as the use of
widgets in custom views, slot management for Centreon DSM, use of deployed
Plugin Packs, and more.

The use of the functionalities within the user interface includes access to the various Centreon menus, as well as the
actions performed by the user within the interface (button clicks, focus on a form field, etc.)

## Frequently Asked Questions

### What are the possible configuration settings of the CEIP program?

Participation in the program is enabled by default. However, sending advanced statistics and functionality usage can be
configured in the web interface. The options are:

  - Enabled
  - Disabled

Users can change the option from **Administration \> Parameters \> Centreon UI
\> Send anonymous statistics** menu at any time.

### What will Centreon do with the information that is collected?

The information collected will be used to better understand how customers use
Centreon products, and how to improve Centreon products by fixing issues and
delivering the most useful new features in a much more streamlined manner.

### Is the collected information anonymous?

YES\! Moreover, Centreon takes all necessary precautions to protect the security
of the information that is collected, transmitted and stored. We only collect
data of Centreon product(s). The program takes only those actions described on
this page, and only if you decide to participate. This program cannot collect
information without your full knowledge or consent.

### How does the Centreon Experience Improvement Program work?

This is an automated process that requires no effort to participate. It is
transparent to users. Customers simply choose to participate, granting Centreon
permission to securely receive anonymous data.

### Will I receive spam if I participate in the program?

You will not receive any e-mail from Centreon about this program, regardless of
whether or not you participate. We do not collect personal information as part
of this program that will be used to identify you or contact you.

### Do I need an Internet connection?

An internet connection is required to participate in this program. However, you
do not need to be connected all the time. When an internet connection becomes
available, the information is automatically transmitted with minimal impact to
your connection.

### Can I see the data that is collected before it is sent to Centreon?

No, the information cannot be displayed. This program is designed to work for
thousands of users without affecting their product use, so the data is sent
automatically. The data is also encoded and compressed so that it can be
processed efficiently.

### How long does the program last?

Information is collected as long as you use the product version for which you
have agreed to participate or until you decide to stop participating in the
program.

### What is the anonymous installation ID used for?

Upon the first startup of the Centreon server, a random number is generated: the
anonymous installation ID.

### Which products support the Centreon Experience Improvement Program?

The CEIP program covers the Centreon central server.
